[package]
name = "nano_arena"
version = "0.5.2"
authors = ["Bennett Hardwick <me@bennetthardwick.com>"]
edition = "2018"
license = "MIT"
description = "A tiny arena allocator that uses atomics"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[badges]
travis-ci = { repository = "https://github.com/bennetthardwick/nano-arena" }

[dev-dependencies]
criterion = "0.3.2"

[[bench]]
name = "benches"
path = "benches/benches.rs"
harness = false

[profile.bench]
debug = true
